Fix bug collapse and add new lines

--- a/src/pages/Directory/components/OrganisationChart/components/OrganizationChart/index.less
+++ b/src/pages/Directory/components/OrganisationChart/components/OrganizationChart/index.less
@@ -99,10 +99,18 @@
             }
         }
 
-        .lineNode{
-            width: 100%;
-            display: flex;
-            justify-content: center;
+        .nodesTree{
+            max-width: 750px; // exactly = 750px
+            /*
+                - each node's width = 234px. 
+                - 3 columns => 234px * 3 = 702px
+                - spacing between nodes: 24px
+                -> 702 + 24*2 = 750px
+            */      
+
+            .lineNode{
+                width: 100%;
+            }
         }
 
         .childrenList{
@@ -110,18 +118,8 @@
             align-items: center;
             flex-wrap: wrap;
             gap: 24px;
-            width: 100%;
 
             .employeeNode{
-                // margin: 113px 0 0 0;
-                // margin-bottom: 24px;
-                max-width: 750px; // exactly = 750px
-                /*
-                    - each node's width = 234px. 
-                    - 3 columns => 234px * 3 = 702px
-                    - spacing between nodes: 24px
-                    -> 702 + 24*2 = 750px
-                */ 
             }
         }
     }
